[package]
name = "uefidbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.24.0"
uefi-services = { version = "0.21", default-features = false}
atomic_refcell = "0.1.6"
log = { version = "0.4", default-features = false }